# Veilbreaker

./: .env.example  .gitignore  .importlinter  CLAUDE.md  CONTRIBUTING.md  Makefile  OUTDATED_DOCUMENTATION_GUIDELINE.md  README.md  TODO.md  UNNECESSARY_CODE_GUIDELINE.md  onboard.py  prek.toml  pyproject.toml  pytest.ini  railway.toml
.agents/skills/manage-agent-config/: SKILL.md
.claude/: settings.json
.claude/hooks/: enforce-makefile.py
.claude/rules/: codex-claude-sync.md
.claude/skills/: manage-agent-config
.claude/skills/cleanup/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/prek-precommit-hook/: SKILL.md
.claude/skills/ralph/: SKILL.md
.claude/skills/wait/: SKILL.md
.cursor/rules/: common.mdc  file_length.mdc  langfuse.mdc  makefile-commands.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: a_test_target_tests.yml  agents_validate.yaml  codeql.yml  docs-lint.yaml  jules-find-outdated-docs.yml  jules-prune-unnecessary-code.yml  jules-sync-translations.yml  linter_require_ruff.yaml  markdown-link-lint.yaml  nightly_tests.yaml  release.yml  vulture_dead_code.yaml
common/: config_models.py  flags.py  global_config.py  global_config.yaml
docs/: middleware.ts  next.config.mjs  ops.md  package.json  translation-guide.md
docs/app/: global.css  layout.tsx
docs/app/[lang]/: layout.tsx
docs/app/[lang]/(home)/: page.tsx
docs/app/[lang]/docs/: layout.tsx
docs/app/[lang]/docs/[[...slug]]/: page.tsx
docs/app/api/search/: route.ts
docs/app/llms-full.txt/: route.ts
docs/app/llms.mdx/[lang]/docs/[[...slug]]/: route.ts
docs/content/docs/: api.es.mdx  api.ja.mdx  api.zh.mdx  index.es.mdx  index.ja.mdx  index.mdx  index.zh.mdx  test.es.mdx  test.ja.mdx  test.zh.mdx
docs/lib/: cn.ts  i18n.ts  layout.shared.tsx  source.ts
docs/scripts/: lint.ts
init/: README.md  __init__.py  generate_banner.py  generate_logo.py
manual_docs/: branch_comparison.md
scripts/: check_ai_writing.py  check_file_length.py  ralph.sh  sync_agent_config.py  validate_agents_md.py
scripts/ralph/: prompt.md
src/server/: FOR_AGENTS.md  README.md  REST_API.md  __init__.py  app.py  fingerprint.py  models.py  service.py  spec.md  storage.py
src/utils/: logging_config.py
tests/: test_logging_security.py  test_logging_thread_safety.py  test_template.py
tests/healthcheck/: test_common.py  test_env_var_loading.py  test_pydantic_type_coercion.py
tests/server/: test_server_mvp.py
utils/llm/: dspy_inference.py  dspy_langfuse.py
(+1 files in other folders)
